--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <div class="matrix">
         <!-- Images will be inserted here -->
       </div>
+      <div>
       <div class="matrix-popup">
         <a class="popup-button" id="prev-button">&#10094;</a>
         <a class="popup-button" id="next-button">&#10095;</a>
@@ -39,6 +40,7 @@
           <!-- Text content is inserted here -->
           <h3 class="project-title"></h3>
           <p class="project-story"></p>
+        </div>
         </div>
       </div>
       <div class="imm-sch-url-container">
